--- a/source-css/coloratura.css
+++ b/source-css/coloratura.css
@@ -543,7 +543,7 @@ a[href|="/applederp"],a[href|="/rapplederp"],a[href|="/ppseesyou"],a[href|="/rpp
 
 /*---------------- END COPY ----------------*/
 
-a[href|="/countesssing"], a[href|="/raramagic"], a[href|="/thecountess"], a[href|="/happyrara"], a[href|="/rarasing"], a[href|="/sadrara"], a[href|="/svengallop"], a[href|="/fillyrarasing"], a[href|="/rarashock"], a[href|="/countempt"], a[href|="/countesslook"], a[href|="/raraglad"] {
+a[href|="/countesssing"], a[href|="/raramagic"], a[href|="/thecountess"], a[href|="/happyrara"], a[href|="/rarasing"], a[href|="/sadrara"], a[href|="/svengallop"], a[href|="/fillyrarasing"], a[href|="/rarashock"], a[href|="/countempt"], a[href|="/countesslook"], a[href|="/raraglad"], a[href|="/sadcountess"], a[href|="/rarasmile"] {
   display: block;
   clear: none;
   float: left;
@@ -565,6 +565,8 @@ a[href|="/rarashock"] { background-position: 0 -140px }
 a[href|="/countempt"] { background-position: -70px -140px }
 a[href|="/countesslook"] { background-position: -140px -140px }
 a[href|="/raraglad"] { background-position: -210px -140px }
+a[href|="/sadcountess"] { background-position: 0 -210px }
+a[href|="/rarasmile"] { background-position: -70px -210px }
 
 a[href|="/rarajackhug"], a[href|="/hoovsies"] {
   display: block;
