--- a/source-css/equestriagirls.css
+++ b/source-css/equestriagirls.css
@@ -944,6 +944,8 @@ a[href="/s"]:hover::after {
 .side .md table:nth-of-type(3) tr:nth-of-type(8) td:nth-of-type(2):after{content:"ariagirl"}
 .side .md table:nth-of-type(3) tr:nth-of-type(8) td:nth-of-type(3):after{content:"sonatagirl"}
 .side .md table:nth-of-type(3) tr:nth-of-type(8) td:nth-of-type(4):after{content:"incorrect"}
+.side .md table:nth-of-type(3) tr:nth-of-type(10) td:nth-of-type(2):after{content:"hppshrug"}
+.side .md table:nth-of-type(3) tr:nth-of-type(10) td:nth-of-type(3):after{content:"hraritywhy"}
 
 /*announcement bar*/
 
@@ -1519,7 +1521,7 @@ a[href|="/egb09"],a[href|="/pinkiederp"] {background-position: 0 -630px}
 a[href|="/egb19"],a[href|="/shutupanddance"] {background-position: -70px -630px}
 a[href|="/egb29"],a[href|="/intriguing"] {background-position: -140px -630px}
 
-a[href|="/egc00"],a[href|="/twilightrocks"],a[href|="/egc10"],a[href|="/rainbowrocks"],a[href|="/egc20"],a[href|="/pinkierocks"],a[href|="/regc00"],a[href|="/rtwilightrocks"],a[href|="/regc10"],a[href|="/rrainbowrocks"],a[href|="/regc20"],a[href|="/rpinkierocks"],a[href|="/egc01"],a[href|="/zapreally"],a[href|="/egc11"],a[href|="/airguitar"],a[href|="/egc21"],a[href|="/imontoyou"],a[href|="/egc02"],a[href|="/sugarright"],a[href|="/egc12"],a[href|="/toolatenow"],a[href|="/egc22"],a[href|="/adagiogirl"],a[href|="/egc03"],a[href|="/ariagirl"],a[href|="/egc13"],a[href|="/sonatagirl"],a[href|="/egc23"],a[href|="/incorrect"] {
+a[href|="/egc00"],a[href|="/twilightrocks"],a[href|="/egc10"],a[href|="/rainbowrocks"],a[href|="/egc20"],a[href|="/pinkierocks"],a[href|="/regc00"],a[href|="/rtwilightrocks"],a[href|="/regc10"],a[href|="/rrainbowrocks"],a[href|="/regc20"],a[href|="/rpinkierocks"],a[href|="/egc01"],a[href|="/zapreally"],a[href|="/egc11"],a[href|="/airguitar"],a[href|="/egc21"],a[href|="/imontoyou"],a[href|="/egc02"],a[href|="/sugarright"],a[href|="/egc12"],a[href|="/toolatenow"],a[href|="/egc22"],a[href|="/adagiogirl"],a[href|="/egc03"],a[href|="/ariagirl"],a[href|="/egc13"],a[href|="/sonatagirl"],a[href|="/egc23"],a[href|="/incorrect"],a[href|="/egc04"],a[href|="/hppshrug"],a[href|="/egc14"],a[href|="/hraritywhy"] {
   display: block;
   clear: none;
   float: left;
@@ -1540,6 +1542,8 @@ a[href|="/egc22"],a[href|="/adagiogirl"] {background-position: -140px -140px}
 a[href|="/egc03"],a[href|="/ariagirl"] {background-position: 0 -210px}
 a[href|="/egc13"],a[href|="/sonatagirl"] {background-position: -70px -210px}
 a[href|="/egc23"],a[href|="/incorrect"] {background-position: -140px -210px}
+a[href|="/egc04"],a[href|="/hppshrug"] {background-position: 0 -280px}
+a[href|="/egc14"],a[href|="/hraritywhy"] {background-position: -70px -280px}
 
 /*deprecated reverse emotes*/
 
