--- a/source-css/mylittlemilkyway.css
+++ b/source-css/mylittlemilkyway.css
@@ -210,6 +210,38 @@ a[href|="/milkydance"]
     width: 233px;
 }
 
+a[href|="/milkyanger"]
+{
+
+ background-image: url(%%milkyanger%%);
+    clear: none;
+    display: block;
+    float: left;
+    height: 180px;
+    width: 223px;
+}
+
+a[href|="/milkyhold"]
+{
+
+ background-image: url(%%milkysss%%);
+    clear: none;
+    display: block;
+    float: left;
+    height: 175px;
+    width: 202px;
+}
+
+a[href|="/milkystare"]
+{
+
+ background-image: url(%%milkystare%%);
+    clear: none;
+    display: block;
+    float: left;
+    height: 166px;
+    width: 170px;
+}
 
 /*** Title Box ***/
 
