--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -505,7 +505,7 @@ a[href|="/twithatsnice"], a[href|="/buysomeapples"], a[href|="/cadsoawesome"], a
 {background-image:url(%%70x70b%%);width:70px;height:70px;display:block;float:left;}
 
 /* 70x70c 'motes */
-a[href|="/trixcookie"], a[href|="/spitfirejudge"], a[href|="/marblescared"], a[href|="/apathiawhat"], a[href|="/changelingsad"], a[href|="/sadtwilight"], a[href|="/sadtwilight2"], a[href|="/twicheesy"], a[href|="/fritterugh"], a[href|="/frittugh"], a[href|="/celestiahh"], a[href|="/nervoustrixie"], a[href|="/youkickedthepuppy"], a[href|="/disreally"], a[href|="/ssshy"], a[href|="/ajangry"], a[href|="/twidisappointed"], a[href|="/sadscoots"], a[href|="/rdspeechless"], a[href|="/scootadrunk"], a[href|="/didneyland"], a[href|="/DIDNEYLAND"], a[href|="/ssawe"], a[href|="/crazyfs"], a[href|="/fstwicrazy"], a[href|="/flutterconfused"], a[href|="/changelingmad"], a[href|="/celoohshiny"], a[href|="/mayormare"], a[href|="/ppcuteshrug"], a[href|="/riffyeah"], a[href|="/supersmugdash"], a[href|="/rdyes"], a[href|="/starlightbeam"], a[href|="/nervousshy"], a[href|="/quibblepants"], a[href|="/moondancerexcited"], a[href|="/ajuwotm8"], a[href|="/ajuwatm8"], a[href|="/celestiawtf"], a[href|="/dragonlordtorch"], a[href|="/rdwutbag"], a[href|="/moondancercrazy"]
+a[href|="/trixcookie"], a[href|="/spitfirejudge"], a[href|="/marblescared"], a[href|="/apathiawhat"], a[href|="/changelingsad"], a[href|="/sadtwilight"], a[href|="/sadtwilight2"], a[href|="/twicheesy"], a[href|="/fritterugh"], a[href|="/frittugh"], a[href|="/celestiahh"], a[href|="/nervoustrixie"], a[href|="/youkickedthepuppy"], a[href|="/disreally"], a[href|="/ssshy"], a[href|="/ajangry"], a[href|="/twidisappointed"], a[href|="/sadscoots"], a[href|="/rdspeechless"], a[href|="/scootadrunk"], a[href|="/didneyland"], a[href|="/DIDNEYLAND"], a[href|="/ssawe"], a[href|="/crazyfs"], a[href|="/fstwicrazy"], a[href|="/flutterconfused"], a[href|="/changelingmad"], a[href|="/celoohshiny"], a[href|="/mayormare"], a[href|="/ppcuteshrug"], a[href|="/riffyeah"], a[href|="/supersmugdash"], a[href|="/rdyes"], a[href|="/starlightbeam"], a[href|="/nervousshy"], a[href|="/quibblepants"], a[href|="/moondancerexcited"], a[href|="/ajuwotm8"], a[href|="/ajuwatm8"], a[href|="/celestiawtf"], a[href|="/dragonlordtorch"], a[href|="/rdwutbag"], a[href|="/moondancercrazy"], a[href|="/moondancersquint"], a[href|="/whofarted"], a[href|="/ajwingspanked"]
 {background-image:url(%%70x70c%%);width:70px;height:70px;display:block;float:left;}
 
 /* 100x100a 'motes. */
@@ -521,7 +521,7 @@ a[href|="/sadbot"], a[href|="/trixiecrazy"], a[href|="/wheredidthemuffingo"], a[
 {background-image:url(%%100x100c%%);width:100px;height:100px;display:block;float:left;}
 
 /* 100x100d 'motes */
-a[href|="/vinylscrewyou"], a[href|="/browniewat"], a[href|="/rainbowtwiglee"], a[href|="/sillybooze"], a[href|="/chrysathis"], a[href|="/discordsmug"], a[href|="/discrazy"], a[href|="/emberhappy"], a[href|="/trixieface"], a[href|="/ikickedthepuppy"], a[href|="/sadspike"], a[href|="/whatismylife"], a[href|="/fsfu"], a[href|="/ponk"], a[href|="/nerdfleetfoot"], a[href|="/cadancegonnacutsomeone"], a[href|="/cadencegonnacutsomeone"], a[href|="/flutterhonk"], a[href|="/smugshy"], a[href|="/sunsetcrazy"], a[href|="/raricatmallow"], a[href|="/raricatmellow"], a[href|="/twiscrunchwings"], a[href|="/trixiebag"], a[href|="/twilightyoufool"], a[href|="/twilightscold"], a[href|="/chrysalisrage"], a[href|="/youdensemotherbucker"]
+a[href|="/vinylscrewyou"], a[href|="/browniewat"], a[href|="/rainbowtwiglee"], a[href|="/sillybooze"], a[href|="/chrysathis"], a[href|="/discordsmug"], a[href|="/discrazy"], a[href|="/emberhappy"], a[href|="/trixieface"], a[href|="/ikickedthepuppy"], a[href|="/sadspike"], a[href|="/whatismylife"], a[href|="/fsfu"], a[href|="/ponk"], a[href|="/nerdfleetfoot"], a[href|="/cadancegonnacutsomeone"], a[href|="/cadencegonnacutsomeone"], a[href|="/flutterhonk"], a[href|="/smugshy"], a[href|="/sunsetcrazy"], a[href|="/raricatmallow"], a[href|="/raricatmellow"], a[href|="/twiscrunchwings"], a[href|="/trixiebag"], a[href|="/twilightyoufool"], a[href|="/twilightscold"], a[href|="/chrysalisrage"], a[href|="/youdensemotherbucker"], a[href|="/ponkponder"], a[href|="/peachhack"], a[href|="/rude"], a[href|="/nightmarewut"], a[href|="/rddisapproves"], a[href|="/midnightaegis"]
 {background-image:url(%%100x100d%%);width:100px;height:100px;display:block;float:left;}
 
 /* 150x150a 'motes. */
@@ -545,7 +545,7 @@ a[href|="/boopening"], a[href|="/agentt"], a[href|="/hoodiedash"], a[href|="/shy
 {background-image:url(%%150x150e%%);width:150px;height:150px;display:block;float:left;}
 
 /* 150x150f 'motes */
-a[href|="/twitation"], a[href|="/yourexistenceannoysme"]
+a[href|="/twitation"], a[href|="/yourexistenceannoysme"], a[href|="/apfle"]
 {background-image:url(%%150x150f%%);width:150px;height:150px;display:block;float:left;}
 
 /* 200x200a 'motes. */
@@ -622,8 +622,12 @@ a[href|="/apathiawhatareyoudoing"], a[href|="/doubletrix"], a[href|="/catscratch
 {background-image:url(%%misfitsn%%);display:block;float:left;}
 
 /* Misfits o */
-a[href|="/flscrunch"], a[href|="/downcastspike"], a[href|="/lyraseewhatyoudidthere"], a[href|="/spikefakesmile"], a[href|="/babythorax"], a[href|="/babychangeling"], a[href|="/aurryhugs"], a[href|="/pinkiebard"], a[href|="/thoraxaww"], a[href|="/adorababs"], a[href|="/sweetiegtfo"], a[href|="/discordvillain"], a[href|="/ishipitsohard"], a[href|="/twistarcuddle"], a[href|="/ppangel"], a[href|="/hmmcoffee"], a[href|="/twilightsdayout"], a[href|="/letskickthepuppy"], a[href|="/morningflutter"], a[href|="/twibag"], a[href|="/bloomrage"], a[href|="/sunbag"], a[href|="/preparingtokickthepuppy"], a[href|="/sweetiemilk"], a[href|="/pinkiehameha"]
+a[href|="/flscrunch"], a[href|="/downcastspike"], a[href|="/lyraseewhatyoudidthere"], a[href|="/spikefakesmile"], a[href|="/babythorax"], a[href|="/babychangeling"], a[href|="/aurryhugs"], a[href|="/pinkiebard"], a[href|="/thoraxaww"], a[href|="/adorababs"], a[href|="/sweetiegtfo"], a[href|="/discordvillain"], a[href|="/ishipitsohard"], a[href|="/twistarcuddle"], a[href|="/ppangel"], a[href|="/hmmcoffee"], a[href|="/twilightsdayout"], a[href|="/letskickthepuppy"], a[href|="/morningflutter"], a[href|="/twibag"], a[href|="/bloomrage"], a[href|="/sunbag"], a[href|="/preparingtokickthepuppy"], a[href|="/sweetiemilk"], a[href|="/pinkiehameha"], a[href|="/purplepanic"], a[href|="/sunlightcheer"], a[href|="/poniesarentreal"]
 {background-image:url(%%misfitso%%);display:block;float:left;}
+
+/* Misfits p */
+a[href|="/celestiawat"], a[href|="/hellodarkness"], a[href|="/discordross"]
+{background-image:url(%%misfitsp%%);display:block;float:left;}
 
 /*
   ------
@@ -638,7 +642,7 @@ a[href|="/twispike"], a[href|="/pinkiemail"], a[href|="/chibiluna"], a[href|="/a
 {background-position: -100% 0%;}
 
 /* Grid pos 2,0 'motes */
-a[href|="/shiningcadancehug"], a[href|="/obsessivetrixie"], a[href|="/trixiebeingcreepy"], a[href|="/twicider"], a[href|="/rainbowstache"], a[href|="/sparklelove"], a[href|="/libwawy"], a[href|="/ohgoditstoocute"], a[href|="/applewat"], a[href|="/proletariat"], a[href|="/pikachu"], a[href|="/sursilly"], a[href|="/cadsoawesome"], a[href|="/wheredidthemuffingo"], a[href|="/hoodiedash"], a[href|="/marblescared"], a[href|="/rainbowtwiglee"]
+a[href|="/shiningcadancehug"], a[href|="/obsessivetrixie"], a[href|="/trixiebeingcreepy"], a[href|="/twicider"], a[href|="/rainbowstache"], a[href|="/sparklelove"], a[href|="/libwawy"], a[href|="/ohgoditstoocute"], a[href|="/applewat"], a[href|="/proletariat"], a[href|="/pikachu"], a[href|="/sursilly"], a[href|="/cadsoawesome"], a[href|="/wheredidthemuffingo"], a[href|="/hoodiedash"], a[href|="/marblescared"], a[href|="/rainbowtwiglee"], a[href|="/apfle"]
 {background-position: -200% 0%;}
 
 /* Grid pos 0,1 'motes */
@@ -726,27 +730,27 @@ a[href|="/shibetwi"], a[href|="/rdtwicrazy"], a[href|="/apathiaunsure"], a[href|
 {background-position: -200% -700%;}
 
 /* Grid pos 0,8 'motes */
-a[href|="/wowsocane"], a[href|="/rdtwibeam"], a[href|="/apathiashrug"], a[href|="/snowdropmeh"], a[href|="/justdoit"], a[href|="/ppcuteshrug"]
+a[href|="/wowsocane"], a[href|="/rdtwibeam"], a[href|="/apathiashrug"], a[href|="/snowdropmeh"], a[href|="/justdoit"], a[href|="/ppcuteshrug"], a[href|="/ponkponder"]
 {background-position: -0% -800%;}
 
 /* Grid pos 1,8 'motes */
-a[href|="/shibelyra"], a[href|="/rdtwisquint"], a[href|="/chrome"], a[href|="/vinyllook"], a[href|="/riffyeah"]
+a[href|="/shibelyra"], a[href|="/rdtwisquint"], a[href|="/chrome"], a[href|="/vinyllook"], a[href|="/riffyeah"], a[href|="/peachhack"]
 {background-position: -100% -800%;}
 
 /* Grid pos 2,8 'motes */
-a[href|="/shibemena"], a[href|="/rdtwistare"], a[href|="/firefox"], a[href|="/horsewife"], a[href|="/browniebun"], a[href|="/supersmugdash"]
+a[href|="/shibemena"], a[href|="/rdtwistare"], a[href|="/firefox"], a[href|="/horsewife"], a[href|="/browniebun"], a[href|="/supersmugdash"], a[href|="/rude"]
 {background-position: -200% -800%;}
 
 /* Grid pos 0,9 'motes */
-a[href|="/shibepie"], a[href|="/rdtwiponder"], a[href|="/derpyhasmuffin"], a[href|="/scratchhide"], a[href|="/sneakyhorsewife"], a[href|="/sneakybrownie"], a[href|="/rdyes"]
+a[href|="/shibepie"], a[href|="/rdtwiponder"], a[href|="/derpyhasmuffin"], a[href|="/scratchhide"], a[href|="/sneakyhorsewife"], a[href|="/sneakybrownie"], a[href|="/rdyes"], a[href|="/nightmarewut"]
 {background-position: -0% -900%;}
 
 /* Grid pos 1,9 'motes */
-a[href|="/shibeluna"], a[href|="/twilightstare"], a[href|="/raraglee"], a[href|="/octavia0"], a[href|="/echtron"], a[href|="/starlightbeam"]
+a[href|="/shibeluna"], a[href|="/twilightstare"], a[href|="/raraglee"], a[href|="/octavia0"], a[href|="/echtron"], a[href|="/starlightbeam"], a[href|="/rddisapproves"]
 {background-position: -100% -900%;}
 
 /* Grid pos 2,9 'motes */
-a[href|="/shibederp"], a[href|="/nursesaywhat"], a[href|="/fillyderpysit"], a[href|="/braehay"], a[href|="/fonso"], a[href|="/nervousshy"]
+a[href|="/shibederp"], a[href|="/nursesaywhat"], a[href|="/fillyderpysit"], a[href|="/braehay"], a[href|="/fonso"], a[href|="/nervousshy"], a[href|="/midnightaegis"]
 {background-position: -200% -900%;}
 
 /* Grid pos 0,10 'motes */
@@ -778,15 +782,15 @@ a[href|="/apathiashock"], a[href|="/blushingluna"], a[href|="/berrypinchwhat"], 
 {background-position: 0 -1200%;}
 
 /* Grid pos 1,12 'motes */
-a[href|="/karmahappy"], a[href|="/scootles"], a[href|="/octaviamanic"], a[href|="/traumashy"], a[href|="/youtoldmethiswasagratedmovie"]
+a[href|="/karmahappy"], a[href|="/scootles"], a[href|="/octaviamanic"], a[href|="/traumashy"], a[href|="/youtoldmethiswasagratedmovie"], a[href|="/moondancersquint"]
 {background-position: -100% -1200%;}
 
 /* Grid pos 2,12 'motes */
-a[href|="/discentiaelated"], a[href|="/raritylipbite"], a[href|="/rubylewd"], a[href|="/rainbowshparkle"]
+a[href|="/discentiaelated"], a[href|="/raritylipbite"], a[href|="/rubylewd"], a[href|="/rainbowshparkle"], a[href|="/whofarted"]
 {background-position: -200% -1200%;}
 
 /* Grid pos 0,13 'motes */
-a[href|="/cadshrug"], a[href|="/cheekyjack"], a[href|="/fsnotmad"], a[href|="/pinkiesecret"]
+a[href|="/cadshrug"], a[href|="/cheekyjack"], a[href|="/fsnotmad"], a[href|="/pinkiesecret"], a[href|="/ajwingspanked"]
 {background-position: 0 -1300%;}
 
 /* Grid pos 1,13 'motes */
@@ -1409,3 +1413,9 @@ a[href|="/bloomrage"] {width:78px;height:100px;background-position: -490px -115p
 a[href|="/sunbag"], a[href|="/preparingtokickthepuppy"] {width:82px;height:115px;background-position: -391px 0;}
 a[href|="/sweetiemilk"] {width:84px;height:115px;background-position: -473px 0;}
 a[href|="/pinkiehameha"] {width:203px;height:100px;background-position: -568px -115px;}
+a[href|="/purplepanic"] {width:61px;height:100px;background-position: -373px -365px;}
+a[href|="/sunlightcheer"] {width:187px;height:135px;background-position: -586px -215px;}
+a[href|="/poniesarentreal"] {width:162px;height:150px;background-position: -434px -365px;}
+a[href|="/celestiawat"] {width:128px;height:100px;}
+a[href|="/hellodarkness"] {width:126px;height:100px;background-position: -128px 0;}
+a[href|="/discordross"] {width:108px;height:150px;background-position: 0 -100px;}
