--- a/source-css/shymotes.css
+++ b/source-css/shymotes.css
@@ -2795,7 +2795,17 @@ a[href="/flutterdashlick"],
 
 a[href="/flutterpinkboop"],
 
-a[href="/fluttercoffee"]{
+a[href="/fluttercoffee"],
+
+a[href="/flutterpinknap"],
+
+a[href="/flutterpinkkiss"],
+
+a[href="/flutterpinksmooch"],
+
+a[href="/flutterblanket"],
+
+a[href="/pinkieblanket"]{
 
   display:block;
 
@@ -2936,6 +2946,61 @@ a[href|="/fluttercoffee"]{
   height:150px;
 
 }
+
+a[href|="/flutterpinknap"]{
+
+  background-position:-0px -1950px;
+
+  width:152px;
+
+  height:100px;
+
+}
+
+a[href|="/flutterpinkkiss"]{
+
+  background-position:-0px -2050px;
+
+  width:150px;
+
+  height:150px;
+
+}
+
+a[href|="/flutterpinksmooch"]{
+
+  background-position:-0px -2200px;
+
+  width:178px;
+
+  height:150px;
+
+}
+
+a[href|="/flutterblanket"]{
+
+  background-position:-0px -2350px;
+
+  width:200px;
+
+  height:92px;
+
+}
+
+a[href|="/pinkieblanket"]{
+
+  background-position:-0px -2442px;
+
+  width:200px;
+
+  height:100px;
+
+}
+
+
+
+
+
 
 
 
