--- a/source-css/rosequisition.css
+++ b/source-css/rosequisition.css
@@ -6,13 +6,13 @@ a[href|="/moustachioedrose"] { background-image: url(%%emotes1%%); background-po
 a[href|="/cloakingrose"] { background-image: url(%%emotes1%%); background-position: -12px -695px; width: 201px; height: 170px; }
 a[href|="/fiddle"] { background-image: url(%%emotes1%%); background-position: -5px -295px; width: 206px; height: 200px; }
 a[href|="/iltriello"] { background-image: url(%%emotes1%%); background-position: -1px -0px; width: 323px; height: 285px; }
-a[href|="/thefaceofakiller"] { background-image: url(%%emotes1%%); background-position: -158px -930px; width: 120px; height: 120px; }
+a[href|="/thefaceofakiller"] { background-image: url(%%emotes1%%); background-position: -125px -930px; width: 120px; height: 120px; }
 a[href|="/rosecold"] { background-image: url(%%emotes1%%); background-position: -340px -670px; width: 165px; height: 190px; }
-a[href|="/rosebutt"] { background-image: url(%%emotes1%%); background-position: -525px -595px; width: 208px; height: 110px; }
-a[href|="/roseexcite"] { background-image: url(%%emotes1%%); background-position: -325px -870px; width: 180px; height: 185px; }
+a[href|="/rosebutt"] { background-image: url(%%emotes1%%); background-position: -535px -595px; width: 208px; height: 110px; }
+a[href|="/roseexcite"] { background-image: url(%%emotes1%%); background-position: -245px -870px; width: 180px; height: 185px; }
 a[href|="/chubbierose"] { background-image: url(%%emotes1%%); background-position: -510px -714px; width: 235px; height: 155px; }
 a[href|="/roseshake"] { background-image: url(%%emotes1%%); background-position: -19px -500px; width: 100px; height: 127px; }
-a[href|="/underwhelmedrose"] { background-image: url(%%emotes1%%); background-position: -560px -869px; width: 165px; height: 180px; }
+a[href|="/underwhelmedrose"] { background-image: url(%%emotes1%%); background-position: -430px -869px; width: 165px; height: 180px; }
 a[href|="/simplyrose"] { background-image: url(%%emotes1%%); background-position: -689px -15px; width: 35px; height: 70px; } 
 a[href|="/buysomeflowers"] { background-image: url(%%emotes1%%); background-position: -344px -226px; width: 224px; height: 240px; }
 a[href|="/ponkofapproval"] { background-image: url(%%emotes1%%); background-position: -229px -322px; width: 106px; height: 103px; }
@@ -20,7 +20,8 @@ a[href|="/nerdrose"] { background-image: url(%%emotes1%%); background-position: 
 a[href|="/nerdlily"] { background-image: url(%%emotes1%%); background-position: -586px -263px; width: 160px; height: 165px; }
 a[href|="/lilypoint"] { background-image: url(%%emotes1%%); background-position: -325px -25px; width: 194px; height: 200px; }
 a[href|="/nerddaisy"] { background-image: url(%%emotes1%%); background-position: -570px -102px; width: 161px; height: 160px; }
-a[href|="/sketchyrose"] { background-image: url(%%emotes1%%); background-position: -121px -500px; width: 142px; height: 165px; }
-a[href|="/rosecatsit"] { background-image: url(%%emotes1%%); background-position: -415px -480px; width: 104px; height: 165px; }
+a[href|="/cuterose"] { background-image: url(%%emotes1%%); background-position: -121px -500px; width: 142px; height: 165px; }
+a[href|="/rosecatsit"] { background-image: url(%%emotes1%%); background-position: -620px -885px; width: 104px; height: 165px; }
 a[href|="/h3"] { background-image: url(%%emotes1%%); background-position: -230px -690px; width: 104px; height: 173px; }
-a[href|="/comewithme"] { background-image: url(%%emotes1%%); background-position: -261px -475px; width: 150px; height: 162px; }
+a[href|="/comewithme"] { background-image: url(%%emotes1%%); background-position: -250px -475px; width: 150px; height: 162px; }
+a[href|="/sketchyrose"] { background-image: url(%%emotes1%%); background-position: -397px -475px; width: 149px; height: 169px;}
