--- a/source-css/sunsetshimmer.css
+++ b/source-css/sunsetshimmer.css
@@ -4,10 +4,25 @@
   height: 175px;
   border-bottom: 0 solid #e2d8ca;
   box-shadow: 0 0 6px #555;
-  background: url(%%fallbanner%%) repeat-x scroll center;
 }
 
 .pagename { font-size: 0; }
+
+.pagename:after {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 175px;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  z-index: -1;
+  content: "";
+  background: url(%%winterbanner%%);
+  -webkit-animation: sidescroll 240s linear infinite;
+  -moz-animation: sidescroll 240s linear infinite;
+  animation: sidescroll 240s linear infinite;
+}
 
 .pagename a {
   display: block;
@@ -22,28 +37,13 @@
 #header-img { margin: 6px 0px 0px 0px }
 
 @-webkit-keyframes sidescroll {
-  from {
-    -webkit-transform: translateX(0px);
-}
-  to {
-    -webkit-transform: translateX(-1161px);
-  }
+  100% { background-position: -2097px 0; }
 }
 @-moz-keyframes sidescroll {
-  from {
-    -moz-transform: translateX(0px);
-  }
-  to {
-    -moz-transform: translateX(-1161px);
-  }
+  100% { background-position: -2097px 0; }
 }
 @keyframes sidescroll {
-  from {
-    transform: translateX(0px);
-  }
-  to {
-    transform: translateX(-1161px);
-  }
+  100% { background-position: -2097px 0; }
 }
 
 div.content { overflow: hidden; }
