--- a/source-css/taviquisition.css
+++ b/source-css/taviquisition.css
@@ -2178,17 +2178,6 @@ a[href|="/tavidoom"] {
  height: 150px;
  background-image: url(%%Octavia-von-Doom-emote%%);
 } 
- 
-a[href|="/taviqmaid1"] {  
- display: block;
- clear: none;
- float: left; 
- height: 208px;
-width: 256px;
- background-image: url(%%TQM1%%);
-
-} 
-
 
 a[href|="/piggyty"] {  
  display: block;
@@ -2731,4 +2720,183 @@ a[href|="/lizardshy"] {
  height: 150px;
  background-image: url(%%manesixaslizards%%);
  background-position: -424px -150px;  
+} 
+
+
+a[href|="/lizardtavi"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 212px;
+ height: 150px;
+ background-image: url(%%manesixaslizards%%);
+ background-position: -614px 0px;  
+} 
+
+
+a[href|="/starlightglizard"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 212px;
+ height: 150px;
+ background-image: url(%%manesixaslizards%%);
+ background-position: -614px -150px;  
+} 
+
+a[href|="/stalinglimmer"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 150px;
+ height: 150px;
+ background-image: url(%%stylesheet-paint%%);
+ background-position: 0px 0px;  
+} 
+
+a[href|="/mingthefabulous"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 170px;
+ height: 150px;
+ background-image: url(%%stylesheet-paint%%);
+ background-position: 0px -150px;  
+} 
+
+a[href|="/fluffybunny"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 180px;
+ height: 150px;
+ background-image: url(%%stylesheet-paint%%);
+ background-position: 0px -300px;  
+} 
+
+a[href|="/frenchpony"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 235px;
+ height: 150px;
+ background-image: url(%%stylesheet-paint%%);
+ background-position: 0px -450px;  
+} 
+
+a[href|="/reallysleepyluna"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 180px;
+ height: 150px;
+ background-image: url(%%stylesheet-paint%%);
+ background-position: 0px -600px;  
+} 
+
+
+a[href|="/ootachi"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 120px;
+ height: 150px;
+ background-image: url(%%stylesheet-paint%%);
+ background-position: -300px -0px;  
+} 
+
+a[href|="/glaceon"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 170px;
+ height: 150px;
+ background-image: url(%%stylesheet-paint%%);
+ background-position: -300px -150px;  
+} 
+
+
+a[href|="/catomato"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 170px;
+ height: 150px;
+ background-image: url(%%stylesheet-paint%%);
+ background-position: -300px -300px;  
+} 
+
+
+a[href|="/existentialcrisis"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 108px;
+ height: 150px;
+ background-image: url(%%stylesheet-paint%%);
+ background-position: -300px -450px;  
+} 
+
+
+a[href|="/squidhorsie"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 210px;
+ height: 150px;
+ background-image: url(%%stylesheet-paint%%);
+ background-position: -300px -600px;  
+} 
+
+a[href|="/blaaaaarg"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 175px;
+ height: 150px;
+ background-image: url(%%stylesheet-paint%%);
+ background-position: -600px -0px;  
+} 
+
+
+a[href|="/robbierotten"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 150px;
+ height: 150px;
+ background-image: url(%%stylesheet-paint%%);
+ background-position: -600px -150px;  
+} 
+
+
+a[href|="/ningentwi"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 150px;
+ height: 150px;
+ background-image: url(%%stylesheet-paint%%);
+ background-position: -600px -300px;  
+} 
+
+
+a[href|="/luissuarezgoalagainstespanyolon18122016fantasticassistbyleomessi"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 170px;
+ height: 150px;
+ background-image: url(%%stylesheet-paint%%);
+ background-position: -600px -450px;  
+} 
+
+
+a[href|="/tavilenny"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 125px;
+ height: 150px;
+ background-image: url(%%tavilenny%%);
 } 
